--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,10 @@ body,
   transition: background-color 0.6s ease, color 0.6s ease;
 }
 
+.screen {
+  transition: background-color 0.4s ease, color 0.4s ease, font-size 0.3s ease;
+}
+
 
 @media (max-width: 768px) {
   .box {
